<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="reset">Reset</string>
    <string name="bill_amount">0.00</string>
    <string name="bill_total">Bill Total</string>
    <string name="tip">Tip</string>
    <string name="tip_amount">0.00</string>
    <string name="total">Total</string>
    <string name="dollar_sign">$</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="clr">CLR</string>
    <string name="del">DEL</string>
    <string name="split">Split</string>
    <string name="split_amount">0.00</string>
    <string name="title_activity_settings">Settings</string>

    <string name="tip_dialog_msg">Select Tip Percentage (%)</string>
    <string name="split_dialog_msg">Select Split</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="default_tip">Default Tip Percentage (%)</string>
    <string name="default_tip_value">15</string>
    <string name="default_split">Default Split</string>
    <string name="default_split_value">2</string>
    <string name="default_tip_percentage">15%</string>

</resources>
