<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.nyim.tipcalculator.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAmount"
            android:paddingTop="@dimen/bill_padding"
            android:paddingBottom="@dimen/bill_padding"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/content_wrap_margin"
                    android:text="@string/bill_total"
                    android:textSize="@dimen/bill_font"
                    android:textStyle="bold"
                    android:gravity="center_vertical"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/dollar_sign"
                    android:textSize="@dimen/bill_font"
                    android:textStyle="bold"
                    android:paddingLeft="@dimen/content_wrap_margin"
                    android:layout_gravity="center_vertical"
                    android:gravity="end"
                    />

            </LinearLayout>

            <TextView
                android:id="@+id/bill_amount"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/content_wrap_margin"
                android:text="@string/bill_amount"
                android:textSize="@dimen/bill_font"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:gravity="end" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/content_wrap_margin"
            android:paddingRight="@dimen/content_wrap_margin" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/content_bottom_margin"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:weightSum="3">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/tip"
                        android:textSize="@dimen/content_font"/>

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:id="@+id/tip_option"
                        android:text="@string/default_tip_percentage"
                        android:textSize="@dimen/button_font"
                        android:backgroundTint="@color/colorAmount" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/content_wrap_margin"
                    android:layout_gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dollar_sign"
                        android:textSize="@dimen/content_font"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tip_amount"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/tip_amount"
                        android:textSize="@dimen/content_font"
                        android:textStyle="bold"
                        android:layout_gravity="center_vertical"
                        android:gravity="end" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorAmount"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/content_top_margin"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/total"
                    android:textSize="@dimen/content_font"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/content_wrap_margin">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dollar_sign"
                        android:textSize="@dimen/content_font"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/total"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/bill_amount"
                        android:textSize="@dimen/content_font"
                        android:textStyle="bold"
                        android:layout_gravity="center_vertical"
                        android:gravity="end" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/content_bottom_margin"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:weightSum="3">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/split"
                        android:textSize="@dimen/split_font"/>

                    <Button
                        android:id="@+id/split_option"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/default_split_value"
                        android:textSize="@dimen/button_font"
                        android:backgroundTint="@color/colorAmount" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/content_wrap_margin"
                    android:layout_gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dollar_sign"
                        android:textSize="@dimen/split_font"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/split_amount"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/split_amount"
                        android:textSize="@dimen/split_font"
                        android:textStyle="bold"
                        android:layout_gravity="center_vertical"
                        android:gravity="end" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAmount"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:weightSum="3"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/one"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/one"
                    android:textAlignment="center"
                    android:gravity="center_vertical|center_horizontal"
                    android:textSize="@dimen/keypad_font"
                    android:clickable="true" />
                <TextView
                    android:id="@+id/two"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/two"
                    android:gravity="center_vertical|center_horizontal"
                    android:textSize="@dimen/keypad_font"
                    android:clickable="true" />
                <TextView
                    android:id="@+id/three"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/three"
                    android:gravity="center_vertical|center_horizontal"
                    android:textSize="@dimen/keypad_font"
                    android:clickable="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:weightSum="3"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/four"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/four"
                    android:gravity="center_vertical|center_horizontal"
                    android:textSize="@dimen/keypad_font"
                    android:clickable="true" />
                <TextView
                    android:id="@+id/five"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/five"
                    android:gravity="center_vertical|center_horizontal"
                    android:textSize="@dimen/keypad_font"
                    android:clickable="true" />
                <TextView
                    android:id="@+id/six"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/six"
                    android:gravity="center_vertical|center_horizontal"
                    android:textSize="@dimen/keypad_font"
                    android:clickable="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:weightSum="3"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/seven"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/seven"
                    android:gravity="center_vertical|center_horizontal"
                    android:textSize="@dimen/keypad_font"
                    android:clickable="true" />
                <TextView
                    android:id="@+id/eight"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/eight"
                    android:gravity="center_vertical|center_horizontal"
                    android:textSize="@dimen/keypad_font"
                    android:clickable="true" />
                <TextView
                    android:id="@+id/nine"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/nine"
                    android:gravity="center_vertical|center_horizontal"
                    android:textSize="@dimen/keypad_font"
                    android:clickable="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:weightSum="3"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/clr"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/clr"
                    android:gravity="center_vertical|center_horizontal"
                    android:textSize="@dimen/keypad_font"
                    android:clickable="true" />
                <TextView
                    android:id="@+id/zero"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/zero"
                    android:gravity="center_vertical|center_horizontal"
                    android:textSize="@dimen/keypad_font"
                    android:clickable="true" />
                <TextView
                    android:id="@+id/del"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/del"
                    android:gravity="center_vertical|center_horizontal"
                    android:textSize="@dimen/keypad_font"
                    android:clickable="true" />
            </LinearLayout>




        </LinearLayout>

    </LinearLayout>

</LinearLayout>
